--- a/index.html
+++ b/index.html
@@ -48,6 +48,60 @@
   </div>
 </nav>
 <img id="image" src="church.jpg">
+<div class="container">
+  <h2 class="page-header" id="life">
+Campus life
+  </h2>
+  <center>
+    <div class="travel_maindiv">
+      <img src="church.jpg">
+      <h4 class="text-capitalize">
+        <kbd>
+          school church
+        </kbd>
+      </h4>
+      <hr>
+      <h5 class="text-success text-capitalize">
+      was established in 1978
+      </h5>
+      <p class="text-muted">church and school are two biggest parts of school life church makes students immerse themselves in the religion</p>
+    </div>
+  </center>
+  <br>
+  <br>
+  <center>
+    <div class="travel_maindiv">
+      <img src="st2.jpg">
+      <h4 class="text-capitalize">
+        <kbd>
+          school libary
+        </kbd>
+      </h4>
+      <hr>
+      <h5 class="text-success text-capitalize">
+      was build in 1980
+      </h5>
+      <p class="text-muted">A school library is a structure within the school that houses a collection of books, audio-visual material and other content that serves common use to meet the educational, informative and recreational needs of the users.</p>
+    </div>
+  </center>
+  <br>
+  <br>
+  <center>
+    <div class="travel_maindiv">
+      <img src="st3.jpg">
+      <h4 class="text-capitalize">
+        <kbd>
+          school auditoritom
+        </kbd>
+      </h4>
+      <hr>
+      <h5 class="text-success text-capitalize">
+      was build in 1982
+      </h5>
+      <p class="text-muted">A school auditorium is a special place for the special events that are conducted in school. It has a hallowed place and a stage. It has a mike and speaker for audio effects. It has a good backdrop on the stage and small stairs on both sides of the stage.</p>
+    </div>
+  </center>
+</div>
 </body>
 
 </html>
