--- a/index.html
+++ b/index.html
@@ -102,6 +102,60 @@ Campus life
     </div>
   </center>
 </div>
+<h2 class="page-header" id="achievements">
+  School Achievements
+        </h2>
+        <div class="bg-primary movies_head" data-toggle="collapse" data-target="#ac1">
+Inter School Debate On Enviroment Pollution
+<i class="fa fa-sort-desc"></i>
+        </div>
+<div class="collapse" id="ac1">
+<div class="ac_text">
+<img src="se1.jpg" class="img-responsive img-thumbnail">
+<h5 class="text-success text-capitalize">Won First Prize In Inter School Debate
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+</h5>
+<p>It Was A Memoroble moment to win at inter school level with a great competition</p>
+</div>
+</div>    
+<div class="bg-primary movies_head" data-toggle="collapse" data-target="#ac2">
+Inter School Football competition
+<i class="fa fa-sort-desc"></i>
+          </div>
+<div class="collapse" id="ac2">
+<div class="ac_text">
+<img src="sm2.jpg" class="img-responsive img-thumbnail">
+<h5 class="text-success text-capitalize">came second in inter school football competition
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+</h5>
+<p>It Was A learning Experience</p>
+</div>
+</div>    
+<div class="bg-primary movies_head" data-toggle="collapse" data-target="#ac3">
+  Inter School Science Project competition
+  <i class="fa fa-sort-desc"></i>
+            </div>
+  <div class="collapse" id="ac3">
+  <div class="ac_text">
+  <img src="sm3.jpg" class="img-responsive img-thumbnail">
+  <h5 class="text-success text-capitalize">came second in inter school science competition
+    <span class="glyphicon glyphicon-star"></span>
+    <span class="glyphicon glyphicon-star"></span>
+    <span class="glyphicon glyphicon-star"></span>
+    <span class="glyphicon glyphicon-star"></span>
+    <span class="glyphicon glyphicon-star"></span>
+  </h5>
+  <p>It Was A learning Experience</p>
+  </div>
+  </div>    
 </body>
 
 </html>
